On logout the auth cookie will be deleted and the cache cleared

--- a/templates/logout.twig
+++ b/templates/logout.twig
@@ -3,7 +3,7 @@
 {% block headerlinks %}{% endblock %}
 
 {% block content %}
-<header>
+<header x-on:turbolinks:render="Turbolinks.clearCache">
 	<h1>{{page.glob.l10n.logout}}</h1>	
 </header>  
 <p>
