Added configuration page options and translations

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -61,4 +61,12 @@
     div.listview {
         @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-6
     }
+
+    div.collapsible {
+
+    }
+
+    div.collapsed {
+        @apply invisible
+    }
 }
