--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -63,10 +63,9 @@
     }
 
     div.collapsible {
-
+        @apply bg-steel-200 border-2 border-r-2
     }
 
     div.collapsed {
-        @apply invisible
     }
 }
