Simplified search option management

--- a/templates/global_search_result.twig
+++ b/templates/global_search_result.twig
@@ -16,7 +16,7 @@
 				{{page.glob.l10n.titles}}: {{books_total}}
 				{% if more_books %}
 					<div class="ml-4 inline-block top-link">
-						<a class="top-link" href="{{page.rot}}/titles/?search={{search}}&case= {{ case }}&transliteration={{ transliteration }}">
+						<a class="top-link" href="{{page.rot}}/titles/?search={{search}}&options={{ options }}">
 							<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
 						</a>
 					</div>
@@ -38,7 +38,7 @@
 				{{page.glob.l10n.authors}}: {{authors_total}}
 				{% if more_authors %}
 					<div class="ml-4 inline-block top-link">
-						<a href="{{page.rot}}/authors/?search={{search}}&case= {{ case }}&transliteration={{ transliteration }}">
+						<a href="{{page.rot}}/authors/?search={{search}}&options={{ options }}">
 							<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
 						</a>
 					</div>
@@ -59,7 +59,7 @@
 				{{page.glob.l10n.tags}}:  {{tags_total}}
 				{% if more_tags %}
 					<div class="ml-4 inline-block top-link">
-						<a  href="{{page.rot}}/tags/?search={{search}}&case= {{ case }}&transliteration={{ transliteration }}">
+						<a  href="{{page.rot}}/tags/?search={{search}}&options={{ options }}">
 							<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
 						</a>
 					</div>
@@ -80,7 +80,7 @@
 				{{page.glob.l10n.series}}:  {{series_total}}
 				{% if more_series %}
 					<div class="ml-4 inline-block top-link">
-						<a  href="{{page.rot}}/series/?search={{search}}&case= {{ case }}&transliteration={{ transliteration }}">
+						<a  href="{{page.rot}}/series/?search={{search}}&options={{ options }}">
 							<svg class="w-6 h-6" fill="none" stroke="currentColor" viewBox="0 0 24 24" xmlns="http://www.w3.org/2000/svg"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 12h.01M12 12h.01M16 12h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z"></path></svg>
 						</a>
 					</div>
