--- a/templates/search_form.twig
+++ b/templates/search_form.twig
@@ -10,7 +10,7 @@
         <fieldset class="config-fieldset">
             {# TODO new translation key for case search #}
             <label for="case">Case sensitive</label>
-            <input type="checkbox" id="case" name="case" {% if case %}checked{% endif %}>
+            <input type="checkbox" id="case" name="case" {% if case %}checked{% endif %} disabled>
             <p>Respect upper/lower case in search text</p>
         </fieldset>
         <fieldset class="config-fieldset">
