--- a/templates/layout.twig
+++ b/templates/layout.twig
@@ -95,7 +95,7 @@
             >
                 <script type="application/javascript">
                     async function visit4Sort(val) {
-                        url = "{{page.rot}}/{{url}}/?index={{curpage}}{% if search is not empty %}&search={{search}}{% endif %}"
+                        url = "{{page.rot}}/{{url}}/?index={{curpage}}{% if search is not empty %}&search={{search}}&options={{search_options}}{% endif %}"
                         switch(val) {
                             case '1': Turbolinks.visit(url+'?sort=byTitle', { action: "replace" }); break;
                             case '2': Turbolinks.visit(url+'?sort=byReverseDate', { action: "replace" }); break;
@@ -108,7 +108,7 @@
                 </a>
                 <a
                         class="{% if curpage is not null and curpage > 0 %}top-link{% else %}top-link-disabled{% endif %}"
-                        href="{% if curpage is not null and curpage > 0 %}{{page.rot}}/{{url}}/?index={{curpage - 1}}{% if search is not empty %}&search={{search}}{% endif %}{% if sort is not empty  %}&sort={{sort}}{% endif %}{% else %}#{% endif %}"
+                        href="{% if curpage is not null and curpage > 0 %}{{page.rot}}/{{url}}/?index={{curpage - 1}}{% if search is not empty %}&search={{search}}&options={{search_options}}{% endif %}{% if sort is not empty  %}&sort={{sort}}{% endif %}{% else %}#{% endif %}"
                         title="{{page.glob.l10n.pagination_prev}}"
                 >
                     <span class="sr-only">{{page.glob.l10n.pagination_prev}}</span>
@@ -130,7 +130,7 @@
                 </span>
                 <a
                         class="{% if curpage is not null and curpage+1 < pages %}top-link{% else %}top-link-disabled{% endif %}"
-                        href="{% if curpage is not null and curpage+1 < pages %}{{page.rot}}/{{url}}/?index={{curpage + 1}}{% if search is not empty %}&search={{search}}{% endif %}{% if sort is not empty  %}&sort={{sort}}{% endif %}{% else %}#{% endif %}"
+                        href="{% if curpage is not null and curpage+1 < pages %}{{page.rot}}/{{url}}/?index={{curpage + 1}}{% if search is not empty %}&search={{search}}&options={{search_options}}{% endif %}{% if sort is not empty  %}&sort={{sort}}{% endif %}{% else %}#{% endif %}"
                         title="{{page.glob.l10n.pagination_next}}"
                 >
                     <span class="sr-only">{{page.glob.l10n.pagination_next}}</span>
