--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -9,10 +9,22 @@
     }
 
     .top-link {
-        @apply bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+        @apply flex-grow bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
     }
     .top-link-disabled {
-        @apply bg-manatee-300 px-1 mx-1 rounded text-black opacity-50
+        @apply flex-grow bg-manatee-300 px-1 mx-1 rounded text-black opacity-50
+    }
+
+    .menu-link {
+        @apply flex-grow text-center bg-manatee-300 px-1 mx-1 rounded text-black hover:text-white focus:outline-none focus:ring-2 focus:ring-offset-2 focus:ring-offset-gray-800 focus:ring-white
+    }
+
+    .menu-link > svg {
+        @apply w-6 h-6 hidden md:inline-flex
+    }
+
+    .menu-link-disabled {
+        @apply flex-grow text-center bg-manatee-300 px-1 mx-1 rounded text-black opacity-50
     }
 
     .config-fieldset {
