alternative title entry layout

--- a/assets/style/style.css
+++ b/assets/style/style.css
@@ -66,8 +66,11 @@
     }
 
 
-    div.listview-titles {
+    /*div.listview-titles {
         @apply grid grid-cols-2 md:grid-cols-3 lg:grid-cols-4
+    }*/
+    div.listview-titles {
+        @apply grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3
     }
 
     div.listview {
